# ai-cicd-github

./: .gitignore  README.md  app.py  dangerous.py  pyproject.toml  requirements.txt
.github/workflows/: .gitkeep  ci.yaml  ci.yml  test-gen.yml
.solutions/: ci.yml
scripts/: .gitkeep  check_coverage.py  generate_tests.py
tests/: conftest.py  test_app.py
